# virtualserial

./: CMakeLists.txt  Makefile  README.md  build.sh  do_cmake.sh
driver/: .cache.mk  Makefile  modules.order  soe_uart.c  soe_uart.h  soe_uart.o.ur-safe  test.sh
driver/.tmp_versions/: soe_uart.mod
include/: bitops.h  compiler.h  event.h  license.h  list.h  logger.h  net.h  option.h  rbtree.h  soe_proto.h  trace.h  util.h  work.h
lib/: .util.c.swp  a.out  checker.c  common.c  event.c  graph.c  license.c  logger.c  net.c  option.c  rbtree.c  trace.c  util.c  work.c
server/: .CMakeLists.txt.swp  .request.c.swp  .serial.c.swp  CMakeLists.txt  Makefile  request.c  serial.c  serial.h  server.c  soe_priv.h
soe_map/: CMakeLists.txt  Makefile  client.c  gdb.txt
soe_mon/: Makefile  a.out  gdb.txt  soe_mon.c  test.c
